environments/test/eduhamuy-web/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: eduhamuy-web
spec:
  parentRefs:
    - name: eduhamuy-web-gateway
      sectionName: https
  hostnames:
    - test.eduhamuy.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: eduhamuy-web
          port: 80
